Ajout et configuration de quelques utilitaires pratiques

--- a/iface_user/test/fixtures/bdd_script_associations.yml
+++ b/iface_user/test/fixtures/bdd_script_associations.yml
@@ -1,3 +1,20 @@
+# == Schema Information
+#
+# Table name: bdd_script_associations
+#
+#  id         :integer          not null, primary key
+#  bdd_id     :integer
+#  script_id  :integer
+#  etat       :string
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+# Indexes
+#
+#  index_bdd_script_associations_on_bdd_id     (bdd_id)
+#  index_bdd_script_associations_on_script_id  (script_id)
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
