--- a/iface_user/Gemfile
+++ b/iface_user/Gemfile
@@ -10,7 +10,7 @@ gem 'sqlite3'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
 # Boostrap
-gem 'twitter-bootstrap-rails'
+gem 'twitter-bootstrap-rails', '~> 3.2.2'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
 # Use CoffeeScript for .coffee assets and views
@@ -36,6 +36,12 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
+gem 'haml-rails', '~> 0.9.0'
+
+# Auth utilisateurs
+gem 'devise', '~> 4.1.0'
+
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
@@ -47,5 +53,14 @@ group :development do
 
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
+
+  # Gems utiles qui ajoutent des commentaires automatiques dans les modèles :
+  gem 'annotate'
+  gem 'better_errors'
+  gem 'binding_of_caller'
+
+  # Gems pour peupler la bdd en dev
+  gem 'populator'
+  gem 'faker'
 end
 
