--- a/iface_user/test/fixtures/fichiers.yml
+++ b/iface_user/test/fixtures/fichiers.yml
@@ -1,3 +1,18 @@
+# == Schema Information
+#
+# Table name: fichiers
+#
+#  id         :integer          not null, primary key
+#  nom        :string
+#  mooc_id    :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+# Indexes
+#
+#  index_fichiers_on_mooc_id  (mooc_id)
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
