--- a/iface_user/test/fixtures/moocs.yml
+++ b/iface_user/test/fixtures/moocs.yml
@@ -1,3 +1,20 @@
+# == Schema Information
+#
+# Table name: moocs
+#
+#  id         :integer          not null, primary key
+#  auteur     :string
+#  id_cours   :string
+#  periode    :string
+#  bdd_id     :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+# Indexes
+#
+#  index_moocs_on_bdd_id  (bdd_id)
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
