Ajout du backend pour l'upload de fichiers en backgroung avec jquery-uploadfile.

--- a/iface_user/Gemfile
+++ b/iface_user/Gemfile
@@ -44,6 +44,10 @@ gem 'devise', '~> 4.1.0'
 # Lancement des scripts en background
 gem 'sidekiq'
 
+# Upload en backgroud des fichiers
+gem 'jquery-fileupload-rails'
+gem 'paperclip'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
