--- a/iface_user/Gemfile
+++ b/iface_user/Gemfile
@@ -46,6 +46,7 @@ gem 'sidekiq'
 
 # Upload en backgroud des fichiers
 gem 'jquery-fileupload-rails'
+gem 'jquery-ui-rails'
 gem 'paperclip'
 
 group :development, :test do
